tests/nightly/function/compile_fail/undefined_precondition.rs
use pre::pre;

fn foo() {}

#[pre]
fn main() {
    #[assure("is bar", reason = "foo is bar")]
    foo()
}
